crates/context-macro/tests/constraints/missing_system_program.fail.stderr
error: One constraint requires including the `Program<System>` account.
  --> tests/constraints/missing_system_program.fail.rs:20:1
   |
20 | / pub struct InitContext {
21 | |     pub payer: Mut<Signer>,
22 | |     #[constraint(
23 | |         init,
...  |
27 | |     pub counter: Mut<Account<Counter>>,
28 | | }
   | |_^
